# fastapi_jwt_auth_with_aws_cognito

./: .pre-commit-config.yaml  LICENSE  pyproject.toml  setup.sh  start.sh
app/: JWTBearer.py  auth.py  exceptions.py  service.py  user_handlers.py
